darkmode fix on small screens

--- a/css/darktheme.css
+++ b/css/darktheme.css
@@ -17,7 +17,7 @@
     --nav-bg: #102E46;
 
     --subnav-bg: #0D0F11;
-    --subnav-item-bg: linear-gradient(rgba(0,0,0,0) 60%, #0D0F11);
+    --subnav-item-bg: linear-gradient(rgba(0,0,0,0) 60%, #101316);
 
     --search-bg: #818181;
     --search-color: black;
